# enable-your-vibe-slides

./: .gitignore  .gitmodules  README.md  app.py  app.yaml  index.html  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: researcher.md  validator.md
sections/00-home/: index.html  section.yaml
sections/01-ai-foundation/: index.html  section.yaml
sections/02-claude-code-features/: index.html  section.yaml
sections/03-mcp-architecture/: README.md  exercise_02_calculator_mcp.py  index.html  section.yaml
sections/04-genie-mcp/: index.html  section.yaml
sections/04-skills-ecosystem/: index.html  section.yaml
sections/05-genie-mcp/: README.md  exercise_01_genie_api.py  exercise_02_genie_mcp_server.py  index.html  section.yaml
sections/05-skills/: index.html  section.yaml
sections/06-agents/: index.html  section.yaml
sections/06-ai-dev-kit/: index.html  section.yaml
sections/06-skills-workflow/: index.html  section.yaml
sections/07-ai-dev-kit/: index.html  section.yaml
sections/07-build-ui/: index.html  section.yaml
sections/07-hooks/: index.html  section.yaml
sections/08-ai-dev-kit/: index.html  section.yaml
sections/08-build-ui/: .env.example  README.md  index.html  section.yaml
sections/08-deploy-to-databricks/: index.html  section.yaml
sections/09-build-ui/: index.html  section.yaml
sections/09-deploy-to-databricks/: index.html  section.yaml
sections/09-google-slides/: index.html  section.yaml
sections/10-deploy-to-databricks/: index.html  section.yaml
shared/assets/: theme.css
shared/scripts/: copy-code.js  serve-slides.py  (+4 more)
(+42 files in other folders)
